<resources>
    <string name="app_name">Total Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_search1">Search1Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_search_beacon">SearchBeaconActivity</string>

    <string name="service_list">service_list</string>
    <string name="characteristic_list">characteristic_list</string>
    <string name="console">console</string>
    <string name="data_changed">data_changed：</string>
    <string name="read">read</string>
    <string name="write">write</string>
    <string name="open_notification">open_notification</string>
    <string name="close_notification">close_notification</string>
    <string name="select_operation_type">select_operation_type</string>
    <string name="characteristic">characteristic</string>
    <string name="start_scan">start_scan</string>
    <string name="stop_scan">stop_scan</string>
    <string name="connect_fail">connect_fail</string>
    <string name="active_disconnected">active_disconnected</string>
    <string name="disconnected">disconnected</string>
    <string name="please_open_blue">please_open_blue</string>
    <string name="notifyTitle">notifyTitle</string>
    <string name="gpsNotifyMsg">gpsNotifyMsg</string>
    <string name="setting">setting</string>
    <string name="cancel">cancel</string>
    <string name="expand_search_settings">expand_search_settings</string>
    <string name="retrieve_search_settings">retrieve_search_settings</string>
    <string name="name">name：</string>
    <string name="mac">mac:</string>
    <string name="service">service</string>
    <string name="type">type</string>
    <string name="setting_name">setting_name</string>
    <string name="setting_mac">setting_mac</string>
    <string name="setting_uuid">setting_uuid</string>
    <string name="scan_setting">scan_setting</string>
    <string name="connect">연결</string>
    <string name="connected">connected</string>
    <string name="disconnect">disconnect</string>
    <string name="enter">enter</string>
    <string name="input_hex">input_hex</string>

    <string name="title_activity_maps">Map</string>
</resources>
